--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,15 @@
 body {
-  background: url("../img/background.jpg") no-repeat top center fixed;
-  background-size: cover;
+  	background: url("../img/background.jpg") no-repeat top center fixed;	
+	background-size: cover;
 }
 
 #logo {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	vertical-align: middle;
+}
+
+h1 {
+	text-align: center;
+	font-family: 'Frijole', cursive;
 }
