--- a/css/showcase.css
+++ b/css/showcase.css
@@ -1,7 +1,7 @@
 #gallery ul {
   list-style: none;
   margin: 0 auto;
-  padding: 0;
+  padding-top: 100px;
   display: block;
   text-align: center; 
 }
@@ -17,12 +17,12 @@
       text-align: center; 
  }
 #gallery ul li img {
-      max-width: 200px;
+      width: 100px;
       display: inline-block;
 }
 
 #gallery ul li h4 {
-      max-width: 300px;
+      max-width: 100px;
       display: flex;
       justify-content: center;
       align-items: center; 
