--- a/css/showcase.css
+++ b/css/showcase.css
@@ -51,6 +51,48 @@ h2 {
   }
 
 
+#menu {
+	display: inline-block;
+}
+
+#menu li {
+	list-style: none;
+	font-family: 'Frijole', cursive;
+	display: inline-block;
+}
+
+#menu a {
+	text-decoration: none;
+	color: black;
+	font-size: 1.25em;
+}
+
+.top {
+	vertical-align: top;
+
+}
+
+.sub {
+	margin-left: -40px;
+	font-size: 0.75em;
+}
+
+.supersub {
+	width: 50px;
+	padding-left: 0;
+}
+.supersub li {
+	width: 50px;
+	font-size: 0.6em;
+	margin-left: 25px;
+}
+
+
+button {
+	background-color:rgba(0,0,0,0);
+	border: none;
+}
+
 /* IMAGE LIGHTBOX STYLES 
 ---------------------------*/
 #imagelightbox {
