--- a/css/showcase.css
+++ b/css/showcase.css
@@ -71,7 +71,10 @@ h2 {
 	vertical-align: top;
 
 }
-
+.all-filter {
+	font-size: 1.25em;
+	padding: 0;
+}
 .sub {
 	margin-left: -40px;
 	font-size: 0.75em;
