--- a/css/about.css
+++ b/css/about.css
@@ -5,3 +5,22 @@
 	max-width: 800px;	
 	padding: 50px;
 }
+
+#thoughts {
+	margin-bottom: 100px;
+}
+#initial {
+	padding: 20px;
+}
+
+#author {
+	max-width: 300px;
+	float: right;
+	padding: 30px;
+}
+
+#teenager {
+	max-width: 300px;
+	float: left;
+	padding: 30px;
+}
