--- a/css/showcase.css
+++ b/css/showcase.css
@@ -1,3 +1,6 @@
+/* Gallery CSS
+----------------------------*/
+
 #gallery ul {
   list-style: none;
   margin: 0 auto;
@@ -8,6 +11,7 @@
 #gallery ul li {
     display: inline-block;
     margin: 20px; 
+    vertical-align: top;
 }    
 #gallery ul li a {
       text-decoration: none; 
@@ -31,26 +35,16 @@
 h2 {
 	text-align: center;
 }
+
 .search {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-#imagelightbox {
-  position: fixed;
-  z-index: 9999;
-  -ms-touch-action: none;
-  touch-action: none; 
-}
 
-#pictureArchive {
-  margin-top: 20px;
-  color: #5a5a5a;
-  text-align: center; 
-  }
-
-
+/* Menu CSS
+---------------------*/
 #menu {
 	display: inline-block;
 }
@@ -65,6 +59,11 @@ h2 {
 	text-decoration: none;
 	color: black;
 	font-size: 1.25em;
+}
+
+#menu button {
+	background-color:rgba(0,0,0,0);
+	border: none;
 }
 
 .top {
@@ -90,11 +89,6 @@ h2 {
 	margin-left: 25px;
 }
 
-
-button {
-	background-color:rgba(0,0,0,0);
-	border: none;
-}
 
 /* IMAGE LIGHTBOX STYLES 
 ---------------------------*/
@@ -145,7 +139,8 @@ button {
   }
 
 #imagelightbox-close:hover, #imagelightbox-close:focus {
-  background-color: gray; }
+  background-color: gray; 
+  }
 
 #imagelightbox-close:before, #imagelightbox-close:after {
   width: 2px;
@@ -155,23 +150,25 @@ button {
   top: 20%;
   bottom: 20%;
   left: 50%;
-  margin-left: -1px; }
+  margin-left: -1px; 
+  }
 
 #imagelightbox-close:before {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
-  transform: rotate(45deg); }
+  transform: rotate(45deg); 
+  }
 
 #imagelightbox-close:after {
   -webkit-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg); }
+  transform: rotate(-45deg); 
+  }
 
 /* CAPTION */
 #imagelightbox-caption {
   color: #fff;
   font-size: 1.5em;
-  background-color: black;
   position: fixed;
   z-index: 10001;
   top: 0;
@@ -180,7 +177,8 @@ button {
   margin-top: 100px;
   padding: 1.625em;
   max-width: 50%;
-  /* 10 */ }
+  /* 10 */ 
+}
 
 #imagelightbox-loading,
 #imagelightbox-overlay,
