--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,10 @@ h1 {
 	font-size: 0.6em;
 	margin-left: 25px;
 }
+
+#feature img {
+	max-width: 400px;
+}
+#feature h3 {
+	font-family: 'Frijole', cursive;
+}
