--- a/css/showcase.css
+++ b/css/showcase.css
@@ -95,19 +95,24 @@ h2 {
 #imagelightbox {
   cursor: pointer;
   position: fixed;
-  z-index: 10000;
-  top: 0;
-  left: 0!important;
-  bottom: 0;  
-  margin-left: 100px;
-  max-width: 40%;
-  -ms-touch-action: none;
-  touch-action: none;
-  -webkit-box-shadow: 0 0 3.125em rgba(0, 0, 0, 0.75);
-  /* 50 */
-  box-shadow: 0 0 3.125em rgba(0, 0, 0, 0.75);
-  /* 50 */ 
+  z-index: 10003;
+  top: 0!important;
+  padding: 20px;
   }
+  
+
+/* CAPTION */
+#imagelightbox-caption {
+  color: #fff;
+  position: fixed;
+  z-index: 10001;
+  left: 0;
+  bottom: 0;
+  padding: 1.625em;
+  
+
+}  
+  
 
 /* OVERLAY */
 #imagelightbox-overlay {
@@ -123,17 +128,13 @@ h2 {
 /* "CLOSE" BUTTON */
 #imagelightbox-close {
   width: 2.5em;
-  /* 40 */
   height: 2.5em;
-  /* 40 */
   text-align: left;
   background-color: #5a5a5a;
   position: fixed;
-  z-index: 10002;
+  z-index: 9999;
   top: 2.5em;
-  /* 40 */
   right: 2.5em;
-  /* 40 */
   -webkit-transition: color .3s ease;
   transition: color .3s ease; 
   }
@@ -165,20 +166,6 @@ h2 {
   transform: rotate(-45deg); 
   }
 
-/* CAPTION */
-#imagelightbox-caption {
-  color: #fff;
-  font-size: 1.5em;
-  position: fixed;
-  z-index: 10001;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  margin-top: 100px;
-  padding: 1.625em;
-  max-width: 50%;
-  /* 10 */ 
-}
 
 #imagelightbox-loading,
 #imagelightbox-overlay,
