--- a/css/query.css
+++ b/css/query.css
@@ -17,21 +17,18 @@
 	}
 	#imagelightbox {
   		left: 0!important;
-  		margin-left: 100px;
-  		margin-top: 50px;
   		padding: 20px;
+
   }
   
 
 /* CAPTION */
 #imagelightbox-caption {
-  right: 0!important;
-  left: auto;
-  top: 0;
-  padding: 1.625em;
-  margin-top: 50px;
+  right: 200px;
+  left: 0;
+  padding: 1.25em;
   margin-right: 100px;
-  max-width: 400px;
 
-}  	
+} 
+ 	
 }
