--- a/css/query.css
+++ b/css/query.css
@@ -2,6 +2,12 @@
 	#menu li {
 		display: block;
 	}
+	
+#menu a {
+	text-decoration: none;
+	color: black;
+	font-size: 2em;
+}	
 	.sub {
 		margin-left: 0;
 		width: 200px;
