--- a/css/showcase.css
+++ b/css/showcase.css
@@ -1,10 +1,28 @@
+
+.pagination>.active>a , .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+	background-color: #D2600A;
+	border-color: #D2600A;
+}
+
+.pagination>li>a {
+	color: #D2600A;
+	border-color: #D2600A;
+}
+
+.pagination>li>a:focus, .pagination>li>a:hover, .pagination>li>span:focus, .pagination>li>span:hover {
+    z-index: 2;
+    color: #D2600A;
+    border-color: #D2600A;
+    background-color: #eee;
+}
+
 /* Gallery CSS
 ----------------------------*/
 
 #gallery ul {
   list-style: none;
   margin: 0 auto;
-  padding-top: 100px;
+  padding-top: 10px;
   display: block;
   text-align: center; 
 }
