--- a/css/query.css
+++ b/css/query.css
@@ -6,8 +6,12 @@
 #menu a {
 	text-decoration: none;
 	color: black;
-	font-size: 2em;
+	font-size: 1.5em;
 }	
+
+#all {
+	font-size: 1.5em;
+}
 	.sub {
 		margin-left: 0;
 		width: 200px;
