--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,7 @@ body {
 }
 
 h1 {
-
-	font-family: 'Frijole', cursive;
-	
+	font-family: 'Frijole', cursive;	
 }
 
 .jumbotron {
@@ -86,3 +84,52 @@ h1 {
 	font-family: 'Frijole', cursive;
 	margin-bottom: 20px;
 }
+
+/* OVERLAY */
+
+#imagelightbox {
+  cursor: pointer;
+  position: fixed;
+  z-index: 10000;
+}
+
+#imagelightbox-overlay {
+  background-image: url("../img/overlay.jpg");
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; 
+  }
+
+/* "CLOSE" BUTTON */
+#imagelightbox-close {
+  width: 2.5em;
+  height: 2.5em;
+  text-align: left;
+  background-color: #5a5a5a;
+  position: fixed;
+  z-index: 9999;
+  top: 2em;
+  right: 2em;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease; 
+  }
+
+
+#imagelightbox-close:hover, #imagelightbox-close:focus{
+  background-color: gray; 
+  }
+
+#imagelightbox-close:before, #imagelightbox-close:after  {
+  width: 2px;
+  color: #fff;
+  content: 'x';
+  font-size: 2.25em;
+  position: absolute;
+  top: -25%;
+  left: 30%;
+  margin-left: -1px; 
+  }
+
