Fixed transform CSS, List.js links

--- a/css/query.css
+++ b/css/query.css
@@ -2,19 +2,18 @@
 	#menu li {
 		display: block;
 	}
-<<<<<<< HEAD
-	
+
+
 #menu a {
 	text-decoration: none;
 	color: black;
 	font-size: 1.5em;
-}	
+}
 
 #all {
 	font-size: 1.5em;
 }
-=======
->>>>>>> 41a800a66f5eccd16da176aa8682c2fb85eda44f
+
 	.sub {
 		margin-left: 0;
 		width: 200px;
@@ -28,11 +27,11 @@
 		width: 200px;
 		font-size: 1em;
 	}
-<<<<<<< HEAD
+
 
   .semisub {
 		margin-left:0;
-		width: auto;  
+		width: auto;
   }
 
 /* CAPTION */
@@ -41,8 +40,8 @@
   		left: 0;
   		padding: 1.25em;
   		margin-right: 100px;
-	} 
- 	
+	}
+
 }
 
 @media only screen and (max-width: 41.25em) {
@@ -51,31 +50,32 @@
     /* 20 */
     right: 1.25em;
     /* 20 */ }
-    
+
   #imagelightbox-toggle {
     top: 4.5em;
     /* 20 */
     right: 1.25em;
-    /* 20 */ }  
-=======
+    /* 20 */ }
+
 	#imagelightbox {
   		left: 0!important;
   		margin-left: 100px;
   		margin-top: 50px;
   		padding: 20px;
+			transform: none!important;
   }
-  
 
-/* CAPTION */
-#imagelightbox-caption {
-  right: 0!important;
-  left: auto;
-  top: 0;
-  padding: 1.625em;
-  margin-top: 50px;
-  margin-right: 100px;
-  max-width: 400px;
 
-}  	
->>>>>>> 41a800a66f5eccd16da176aa8682c2fb85eda44f
+		/* CAPTION */
+		#imagelightbox-caption {
+		  right: 0!important;
+		  left: auto;
+		  top: 0;
+		  padding: 1.625em;
+		  margin-top: 50px;
+		  margin-right: 100px;
+		  max-width: 400px;
+
+		}
+
 }
