--- a/src/css/query.css
+++ b/src/css/query.css
@@ -1,4 +1,8 @@
-@media (min-width: 769px) {
+@media (min-width: 768px) {
+	.jumbotron h1 {
+		width: 80%;
+		font-size: 64px;
+	}
 	#menu li {
 		display: block;
 	}
@@ -53,4 +57,10 @@
     /* 20 */
     right: 1.25em;
     /* 20 */ }  
+}
+
+@media (max-width: 768px) and (min-width: 512px) {
+	.jumbotron h1 {
+		font-size: 2.25em;
+	}
 }
