--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,106 +1,83 @@
 /* Main styles
 -------------------------*/
-
 body {
-  	background-image: url("../img/background3.jpg");	
-	background-position: 100%;
-	background-repeat: repeat;
-	color: black;
-	font-family: 'Droid Sans', sans-serif;
-}
+  background-image: url("../img/background3.jpg");
+  background-position: 100%;
+  background-repeat: repeat;
+  color: black;
+  font-family: 'Droid Sans', sans-serif; }
 
 h1 {
-	font-family: 'Frijole', cursive;	
-}
-
+  font-family: 'Frijole', cursive; }
 
 /* Header styles
 -------------------------*/
-
 .jumbotron {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	background-image: url("../img/background3.jpg");
-	padding: 0!important;
-}
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url("../img/background3.jpg");
+  padding: 0 !important; }
 
 .jumbotron h1 {
-	font-size: 1.25em;
-	text-align: center;
-}
+  font-size: 1.25em;
+  text-align: center; }
 
 .logo {
-	width: 20%;
-	height: 20%;
-}
+  width: 20%;
+  height: 20%; }
 
 /* Footer styles
 -------------------------*/
 footer {
-	height: 10vh;
-	font-family: 'Frijole', cursive;
-	padding: 20px;
-}
-
-
+  height: 10vh;
+  font-family: 'Frijole', cursive;
+  padding: 20px; }
 
 #index {
-	background-image: url("../img/background2.jpg");
-	background-position: center;
-	background-size: cover;
-
-}
+  background-image: url("../img/background2.jpg");
+  background-position: center;
+  background-size: cover; }
 
 #intro {
-	padding: 20px;
-}
+  padding: 20px; }
+
 #menu {
-	display: inline-block;
-	margin-left: -20px;
-}
+  display: inline-block;
+  margin-left: -20px; }
 
 #menu li {
-	list-style: none;
-	font-family: 'Frijole', cursive;
-	display: inline-block;
-}
+  list-style: none;
+  font-family: 'Frijole', cursive;
+  display: inline-block; }
 
 #menu a {
-	text-decoration: none;
-	color: black;
-}
+  text-decoration: none;
+  color: black; }
 
 .top {
-	vertical-align: top;
-
-}
-
+  vertical-align: top; }
 
 #feature img {
-	padding: 10px;
-	display: block;
-	margin: 0 auto;
-}
+  padding: 10px;
+  display: block;
+  margin: 0 auto; }
 
 #feature img:hover {
-	transition-duration: 0.5s;
-	transform: scale(1.1, 1.1);
-}
+  transition-duration: 0.5s;
+  transform: scale(1.1, 1.1); }
+
 #feature h3 {
-	font-family: 'Frijole', cursive;
-	margin-bottom: 20px;
-	text-align: center;
-}
+  font-family: 'Frijole', cursive;
+  margin-bottom: 20px;
+  text-align: center; }
 
 /* OVERLAY */
-
 #imagelightbox {
   cursor: pointer;
   position: fixed;
   z-index: 10000;
-  padding: 0;
-}
+  padding: 0; }
 
 #imagelightbox-overlay {
   background-image: url("../img/overlay.jpg");
@@ -109,8 +86,7 @@ footer {
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0; 
-  }
+  left: 0; }
 
 /* "CLOSE" BUTTON */
 #imagelightbox-close {
@@ -123,15 +99,12 @@ footer {
   top: 2em;
   right: 2em;
   -webkit-transition: color .3s ease;
-  transition: color .3s ease; 
-  }
+  transition: color .3s ease; }
 
+#imagelightbox-close:hover, #imagelightbox-close:focus {
+  background-color: gray; }
 
-#imagelightbox-close:hover, #imagelightbox-close:focus{
-  background-color: gray; 
-  }
-
-#imagelightbox-close:before, #imagelightbox-close:after  {
+#imagelightbox-close:before, #imagelightbox-close:after {
   width: 2px;
   color: #fff;
   content: 'x';
@@ -139,6 +112,6 @@ footer {
   position: absolute;
   top: -25%;
   left: 30%;
-  margin-left: -1px; 
-  }
+  margin-left: -1px; }
 
+/*# sourceMappingURL=main.css.map */
