--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,31 +8,7 @@ body {
   font-family: 'Droid Sans', sans-serif; }
 
 h1 {
-  font-family: 'Frijole', cursive; }
-
-/* Header styles
--------------------------*/
-.jumbotron {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-image: url("../img/background3.jpg");
-  padding: 0 !important; }
-
-.jumbotron h1 {
-  font-size: 1.25em;
-  text-align: center; }
-
-.logo {
-  width: 20%;
-  height: 20%; }
-
-/* Footer styles
--------------------------*/
-footer {
-  height: 10vh;
-  font-family: 'Frijole', cursive;
-  padding: 20px; }
+  font-family: "Frijole", cursive; }
 
 #index {
   background-image: url("../img/background2.jpg");
@@ -42,37 +18,60 @@ footer {
 #intro {
   padding: 20px; }
 
+/* Header styles
+-------------------------*/
+.jumbotron {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url("../img/background3.jpg");
+  padding: 0 !important; }
+  .jumbotron h1 {
+    font-size: 1.25em;
+    text-align: center; }
+
+.logo {
+  width: 20%;
+  height: 20%; }
+
+/* Footer styles
+-------------------------*/
+footer {
+  height: 10vh;
+  font-family: "Frijole", cursive;
+  padding: 20px; }
+
+/* Menu styles
+-------------------------*/
 #menu {
   display: inline-block;
   margin-left: -20px; }
+  #menu li {
+    list-style: none;
+    font-family: 'Frijole', cursive;
+    display: inline-block;
+    vertical-align: top; }
+  #menu a {
+    text-decoration: none;
+    color: black; }
 
-#menu li {
-  list-style: none;
-  font-family: 'Frijole', cursive;
-  display: inline-block; }
-
-#menu a {
-  text-decoration: none;
-  color: black; }
-
-.top {
-  vertical-align: top; }
-
+/* Feature styles
+----------------------*/
 #feature img {
   padding: 10px;
   display: block;
   margin: 0 auto; }
-
-#feature img:hover {
-  transition-duration: 0.5s;
-  transform: scale(1.1, 1.1); }
+  #feature img:hover {
+    transition-duration: 0.5s;
+    transform: scale(1.1, 1.1); }
 
 #feature h3 {
   font-family: 'Frijole', cursive;
   margin-bottom: 20px;
   text-align: center; }
 
-/* OVERLAY */
+/* Overlay styles
+----------------------*/
 #imagelightbox {
   cursor: pointer;
   position: fixed;
@@ -100,8 +99,206 @@ footer {
   right: 2em;
   -webkit-transition: color .3s ease;
   transition: color .3s ease; }
+  #imagelightbox-close:hover {
+    background-color: gray; }
+  #imagelightbox-close:focus {
+    background-color: gray; }
+  #imagelightbox-close:before {
+    width: 2px;
+    color: #fff;
+    content: 'x';
+    font-size: 2.25em;
+    position: absolute;
+    top: -25%;
+    left: 30%;
+    margin-left: -1px; }
+  #imagelightbox-close:after {
+    width: 2px;
+    color: #fff;
+    content: 'x';
+    font-size: 2.25em;
+    position: absolute;
+    top: -25%;
+    left: 30%;
+    margin-left: -1px; }
 
-#imagelightbox-close:hover, #imagelightbox-close:focus {
+/* About Styles
+ --------------------------*/
+.about {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  padding: 50px; }
+
+#thoughts {
+  margin-bottom: 100px; }
+
+#initial {
+  padding: 20px; }
+
+#author {
+  max-width: 300px;
+  float: right;
+  padding: 30px; }
+
+#teenager {
+  max-width: 300px;
+  float: left;
+  padding: 30px; }
+
+/* Pagination Styles
+ ------------------------*/
+.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+  background-color: #D2600A;
+  border-color: #D2600A; }
+
+.pagination > li > a {
+  color: #D2600A;
+  border-color: #D2600A; }
+
+.pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover {
+  z-index: 2;
+  color: #D2600A;
+  border-color: #D2600A;
+  background-color: #eee; }
+
+/* Gallery CSS
+----------------------------*/
+.list {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap; }
+  .list li {
+    align-self: center; }
+
+.name {
+  color: black; }
+
+#gallery ul li {
+  display: inline-block;
+  margin: 20px;
+  vertical-align: top; }
+  #gallery ul li a {
+    text-decoration: none; }
+  #gallery ul li p {
+    margin-top: 20px;
+    text-align: center; }
+  #gallery ul li img {
+    width: 150px;
+    display: inline-block; }
+  #gallery ul li h4 {
+    max-width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+h2 {
+  text-align: center; }
+
+.search {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+/* Menu CSS
+---------------------*/
+#menu button {
+  background-color: transparent;
+  border: none;
+  margin: 0; }
+
+.top {
+  vertical-align: top;
+  font-size: 1em; }
+
+#all {
+  font-size: 1em;
+  padding: 0; }
+
+.sub {
+  font-size: 0.75em; }
+
+.supersub {
+  padding-left: 0; }
+
+.supersub li {
+  font-size: 0.6em;
+  display: block !important; }
+
+.pagination li {
+  margin: 0 !important; }
+
+/* IMAGE LIGHTBOX STYLES 
+---------------------------*/
+#imagelightbox {
+  cursor: pointer;
+  position: fixed;
+  z-index: 10000;
+  padding: 20px; }
+
+/* CAPTION */
+#imagelightbox-caption {
+  color: black;
+  position: fixed;
+  z-index: 10000;
+  left: 0;
+  bottom: 0;
+  padding: 1em;
+  font-size: 0.9em; }
+
+.picture {
+  position: absolute;
+  top: 0;
+  width: 95%;
+  height: 95%;
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  background-image: url("../img/overlay.jpg"); }
+
+.picture img {
+  padding: 20px; }
+
+.paragraph {
+  margin-left: 20px; }
+
+/* OVERLAY */
+#imagelightbox-overlay {
+  background-image: url("../img/overlay.jpg");
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+/* "CLOSE" BUTTON */
+#imagelightbox-close {
+  width: 2.5em;
+  height: 2.5em;
+  text-align: left;
+  background-color: #5a5a5a;
+  position: fixed;
+  z-index: 9999;
+  top: 2em;
+  right: 2em;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease; }
+
+#imagelightbox-toggle {
+  width: 2.5em;
+  height: 2.5em;
+  text-align: left;
+  background-color: #5a5a5a;
+  position: fixed;
+  z-index: 9999;
+  top: 5em;
+  right: 2em;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease; }
+
+#imagelightbox-close:hover, #imagelightbox-close:focus, #imagelightbox-toggle:hover, #imagelightbox-toggle:focus {
   background-color: gray; }
 
 #imagelightbox-close:before, #imagelightbox-close:after {
@@ -113,5 +310,52 @@ footer {
   top: -25%;
   left: 30%;
   margin-left: -1px; }
+
+#imagelightbox-toggle:before, #imagelightbox-toggle:after {
+  width: 2px;
+  color: #fff;
+  content: '+';
+  font-size: 2.25em;
+  position: absolute;
+  top: -15%;
+  left: 25%;
+  margin-left: -1px; }
+
+/* Query CSS
+---------------------*/
+@media (min-width: 768px) {
+  .jumbotron h1 {
+    width: 80%;
+    font-size: 64px; }
+  #menu li {
+    display: block; }
+  #menu a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.5em; }
+  #all {
+    font-size: 1.5em; }
+  /* CAPTION */
+  #imagelightbox-caption {
+    right: 200px;
+    left: 0;
+    padding: 1.25em;
+    margin-right: 100px; } }
+
+@media only screen and (max-width: 41.25em) {
+  #imagelightbox-close {
+    top: 1.25em;
+    /* 20 */
+    right: 1.25em;
+    /* 20 */ }
+  #imagelightbox-toggle {
+    top: 4.5em;
+    /* 20 */
+    right: 1.25em;
+    /* 20 */ } }
+
+@media (max-width: 768px) and (min-width: 512px) {
+  .jumbotron h1 {
+    font-size: 2.25em; } }
 
 /*# sourceMappingURL=main.css.map */
