--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,6 +72,68 @@ footer {
 
 /* Overlay styles
 ----------------------*/
+.modal-dialog {
+  width: 100%;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.dialogStyle {
+  position: fixed;
+  background-image: url("../img/overlay.jpg");
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  width: 100%;
+  height: 100%; }
+
+.dialog {
+  display: flex; }
+
+.dialogHeader {
+  display: flex; }
+  .dialogHeader h3 {
+    width: 98%; }
+  .dialogHeader button {
+    width: 2.5em;
+    height: 2.5em;
+    text-align: left;
+    background-color: #5a5a5a;
+    position: fixed;
+    z-index: 9999;
+    top: 2em;
+    right: 2em;
+    -webkit-transition: color .3s ease;
+    transition: color .3s ease; }
+    .dialogHeader button:hover {
+      background-color: gray; }
+    .dialogHeader button:focus {
+      background-color: gray; }
+    .dialogHeader button:before {
+      width: 2px;
+      color: #fff;
+      content: 'x';
+      font-size: 2.25em;
+      position: absolute;
+      top: -25%;
+      left: 30%;
+      margin-left: -1px; }
+    .dialogHeader button:after {
+      width: 2px;
+      color: #fff;
+      content: 'x';
+      font-size: 2.25em;
+      position: absolute;
+      top: -25%;
+      left: 30%;
+      margin-left: -1px; }
+
+.dialogDescription {
+  padding: 20px;
+  width: 50%; }
+
 #imagelightbox {
   cursor: pointer;
   position: fixed;
@@ -79,7 +141,6 @@ footer {
   padding: 0; }
 
 #imagelightbox-overlay {
-  background-image: url("../img/overlay.jpg");
   position: fixed;
   z-index: 9998;
   top: 0;
