Added Error Page

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -212,6 +212,29 @@ footer {
   float: left;
   padding: 30px; }
 
+/*Error Styles
+-----------------------*/
+.errorPage {
+  height: 500px; }
+  .errorPage h1 {
+    text-align: center; }
+
+.icn-logo {
+  background: #54606b;
+  color: #fff; }
+
+.icn-logo i {
+  font-size: 2.45em;
+  line-height: 0;
+  margin-top: 30px; }
+
+.icn-error {
+  font-size: 5em;
+  margin-bottom: .25em;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 2em; }
+
 /* Pagination Styles
  ------------------------*/
 .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
@@ -389,6 +412,8 @@ h2 {
 /* Query CSS
 ---------------------*/
 @media (min-width: 768px) {
+  .icn-error {
+    padding: 0 4em; }
   .jumbotron h1 {
     width: 80%;
     font-size: 64px; }
@@ -421,6 +446,8 @@ h2 {
 
 @media (max-width: 768px) and (min-width: 512px) {
   .jumbotron h1 {
-    font-size: 2.25em; } }
+    font-size: 2.25em; }
+  .icn-error {
+    padding: 0 3em; } }
 
 /*# sourceMappingURL=main.css.map */
