--- a/src/css/main.css
+++ b/src/css/main.css
@@ -338,9 +338,8 @@ h2 {
 .picture {
   position: absolute;
   top: 0;
-  width: 95%;
-  height: 95%;
-  margin: 20px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   background-image: url("../img/overlay.jpg"); }
@@ -350,6 +349,13 @@ h2 {
 
 .paragraph {
   margin-left: 20px; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
 
 /* OVERLAY */
 #imagelightbox-overlay {
