--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -425,9 +425,8 @@ h2 {
 .picture {
 	position: absolute;
 	top: 0;
-	width: 95%;
-	height: 95%;
-	margin: 20px;
+	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	background-image: url("../img/overlay.jpg");
@@ -440,6 +439,14 @@ h2 {
 	margin-left: 20px;
 }  
 
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
 /* OVERLAY */
 #imagelightbox-overlay {
   background-image: url("../img/overlay.jpg");
