Cleaned up files

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -95,7 +95,8 @@ footer {
 .dialogHeader {
   display: flex; }
   .dialogHeader h3 {
-    width: 98%; }
+    width: 98%;
+    font-family: "Frijole", cursive; }
   .dialogHeader button {
     width: 2.5em;
     height: 2.5em;
@@ -133,55 +134,9 @@ footer {
 .dialogDescription {
   padding: 20px;
   width: 50%; }
-
-#imagelightbox {
-  cursor: pointer;
-  position: fixed;
-  z-index: 10000;
-  padding: 0; }
-
-#imagelightbox-overlay {
-  position: fixed;
-  z-index: 9998;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; }
-
-/* "CLOSE" BUTTON */
-#imagelightbox-close {
-  width: 2.5em;
-  height: 2.5em;
-  text-align: left;
-  background-color: #5a5a5a;
-  position: fixed;
-  z-index: 9999;
-  top: 2em;
-  right: 2em;
-  -webkit-transition: color .3s ease;
-  transition: color .3s ease; }
-  #imagelightbox-close:hover {
-    background-color: gray; }
-  #imagelightbox-close:focus {
-    background-color: gray; }
-  #imagelightbox-close:before {
-    width: 2px;
-    color: #fff;
-    content: 'x';
-    font-size: 2.25em;
-    position: absolute;
-    top: -25%;
-    left: 30%;
-    margin-left: -1px; }
-  #imagelightbox-close:after {
-    width: 2px;
-    color: #fff;
-    content: 'x';
-    font-size: 2.25em;
-    position: absolute;
-    top: -25%;
-    left: 30%;
-    margin-left: -1px; }
+  .dialogDescription p {
+    font-weight: bold;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; }
 
 /* About Styles
  --------------------------*/
@@ -234,22 +189,6 @@ footer {
   margin-right: auto;
   margin-left: auto;
   padding: 0 2em; }
-
-/* Pagination Styles
- ------------------------*/
-.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
-  background-color: #D2600A;
-  border-color: #D2600A; }
-
-.pagination > li > a {
-  color: #D2600A;
-  border-color: #D2600A; }
-
-.pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover {
-  z-index: 2;
-  color: #D2600A;
-  border-color: #D2600A;
-  background-color: #eee; }
 
 /* Gallery CSS
 ----------------------------*/
@@ -314,27 +253,6 @@ h2 {
   font-size: 0.6em;
   display: block !important; }
 
-.pagination li {
-  margin: 0 !important; }
-
-/* IMAGE LIGHTBOX STYLES 
----------------------------*/
-#imagelightbox {
-  cursor: pointer;
-  position: fixed;
-  z-index: 10000;
-  padding: 20px; }
-
-/* CAPTION */
-#imagelightbox-caption {
-  color: black;
-  position: fixed;
-  z-index: 10000;
-  left: 0;
-  bottom: 0;
-  padding: 1em;
-  font-size: 0.9em; }
-
 .picture {
   position: absolute;
   top: 0;
@@ -357,64 +275,6 @@ h2 {
   right: 0;
   bottom: 0; }
 
-/* OVERLAY */
-#imagelightbox-overlay {
-  background-image: url("../img/overlay.jpg");
-  position: fixed;
-  z-index: 9998;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; }
-
-/* "CLOSE" BUTTON */
-#imagelightbox-close {
-  width: 2.5em;
-  height: 2.5em;
-  text-align: left;
-  background-color: #5a5a5a;
-  position: fixed;
-  z-index: 9999;
-  top: 2em;
-  right: 2em;
-  -webkit-transition: color .3s ease;
-  transition: color .3s ease; }
-
-#imagelightbox-toggle {
-  width: 2.5em;
-  height: 2.5em;
-  text-align: left;
-  background-color: #5a5a5a;
-  position: fixed;
-  z-index: 9999;
-  top: 5em;
-  right: 2em;
-  -webkit-transition: color .3s ease;
-  transition: color .3s ease; }
-
-#imagelightbox-close:hover, #imagelightbox-close:focus, #imagelightbox-toggle:hover, #imagelightbox-toggle:focus {
-  background-color: gray; }
-
-#imagelightbox-close:before, #imagelightbox-close:after {
-  width: 2px;
-  color: #fff;
-  content: 'x';
-  font-size: 2.25em;
-  position: absolute;
-  top: -25%;
-  left: 30%;
-  margin-left: -1px; }
-
-#imagelightbox-toggle:before, #imagelightbox-toggle:after {
-  width: 2px;
-  color: #fff;
-  content: '+';
-  font-size: 2.25em;
-  position: absolute;
-  top: -15%;
-  left: 25%;
-  margin-left: -1px; }
-
 /* Query CSS
 ---------------------*/
 @media (min-width: 768px) {
@@ -430,25 +290,7 @@ h2 {
     color: black;
     font-size: 1.5em; }
   #all {
-    font-size: 1.5em; }
-  /* CAPTION */
-  #imagelightbox-caption {
-    right: 200px;
-    left: 0;
-    padding: 1.25em;
-    margin-right: 100px; } }
-
-@media only screen and (max-width: 41.25em) {
-  #imagelightbox-close {
-    top: 1.25em;
-    /* 20 */
-    right: 1.25em;
-    /* 20 */ }
-  #imagelightbox-toggle {
-    top: 4.5em;
-    /* 20 */
-    right: 1.25em;
-    /* 20 */ } }
+    font-size: 1.5em; } }
 
 @media (max-width: 768px) and (min-width: 512px) {
   .jumbotron h1 {
